# Relex

./: CmakeLists.txt  DefaultNode.xdef  XMLElement.cpp  XMLElement.h  XMLReader.cpp  XMLReader.h  main.cpp
XMLReader/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  XMLElement.cpp  XMLElement.h  XMLReader.cpp  XMLReader.h
main/: CMakeLists.txt  main.cpp
tests/: CmakeLists.txt  TXMLReader.cpp
tests/testdata/: testApp.gml
